Remove attr, might be causing alignment issue.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ layout: home
 	  <h3>My first name is <strong>Nguyen</strong> :)</h3>
 	  <h3>My <a href="{{ site.baseurl }}blog.html">blog</a>, <a href="{{ site.baseurl }}projects.html">projects</a>, <a href="{{ site.baseurl }}vitae"> resume</a>, and online presence:</h3>
 	  {% include social.html %}
-	  <h3 class=""><a href="http://researcher.watson.ibm.com/researcher/view.php?person=au1-khndtran">IBM Research</a>
+	  <h3><a href="http://researcher.watson.ibm.com/researcher/view.php?person=au1-khndtran">IBM Research</a>
 	</div>
 </section>
