--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: home
 	  <h3>Hi! I'm <strong>{{ site.author }}</strong>, a computer science researcher and data scientist,</h3>
 	  <h3>specialising in text mining and machine learning applications.</h3>
 	  <!--<h3>I'm currently completing my <a href="http://researcher.watson.ibm.com/researcher/view.php?person=au1-khndtran">Post-Doc at IBM Research</a> in Melbourne, Australia.</h3>-->
-	  <h3>My first name is <strong>Nguyen</strong> :)</h3>
+	  <h3>Also confusingly, my first name is <strong>Nguyen</strong> :)</h3>
 	  <h3>My <a href="{{ site.baseurl }}blog.html">blog</a>, <a href="{{ site.baseurl }}projects.html">projects</a>, <a href="{{ site.baseurl }}vitae"> resume</a>, and online presence:</h3>
 	  {% include social.html %}
 	  <h3><a href="http://researcher.watson.ibm.com/researcher/view.php?person=au1-khndtran">IBM Research</a>
