--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: home
 	  <h3>specialising in text mining and machine learning applications.</h3>
 	  <!--<h3>I'm currently completing my <a href="http://researcher.watson.ibm.com/researcher/view.php?person=au1-khndtran">Post-Doc at IBM Research</a> in Melbourne, Australia.</h3>-->
 	  <h3>Also, my first name is <strong>Nguyen</strong> :)</h3>
-	  <h3 class="indexhighlight">My recent presentation at RMIT VN: <a href="{{ site.baseurl }}static/pdf/RMIT-VN-Presentation-Full-DS-ML.pdf">PDF slides</a></h3>
+	  <h3 class="indexhighlight">My recent presentation at RMIT VN: <a href="{{ site.baseurl }}static/pdf/RMIT-VN-Presentation-Full-DS-ML.pdf">PDF slides</a> (17MB - Updated 31 July 2017)</h3>
 	  <h3>My <a href="{{ site.baseurl }}blog.html">blog</a>, <!--<a href="{{ site.baseurl }}projects.html">projects</a>,--> <a href="{{ site.baseurl }}vitae"> resume</a>, and online presence:</h3>
 	  {% include social.html %}
 	  <h3><a href="http://researcher.watson.ibm.com/researcher/view.php?person=au1-khndtran">IBM Research</a>
