Added work place.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: home
 	  <div class="avatar">
 		<img class="img-circle" width="25%" src="{{ site.baseurl }}static/img/{{ site.avatar }}" alt="Responsive image">
 	  </div>
-	  <h3>Hi! I'm <strong>{{ site.author }}</strong>, a research scientist,</h3>
+	  <h3>Hi! I'm <strong>{{ site.author }}</strong>, a research scientist at IBM Research Australia,</h3>
 	  <h3>specialising in text mining and machine learning applications.</h3>
 	  <!--<h3>I'm currently completing my <a href="http://researcher.watson.ibm.com/researcher/view.php?person=au1-khndtran">Post-Doc at IBM Research</a> in Melbourne, Australia.</h3>-->
 	  <h3>Also, my first name is <strong>Nguyen</strong> :)</h3>
